Separate fast/slow path Add various control holders Add new variant of use site lambda with abstract class Add DontInline to slow path